Add source links and 'as of' date to limitations in notebook

--- a/google_interaction_api/demo_google_interation_api.ipynb
+++ b/google_interaction_api/demo_google_interation_api.ipynb
@@ -558,14 +558,19 @@
         "- `gemini-3-pro-preview`\n",
         "- `gemini-3-flash-preview`\n",
         "\n",
-        "### Limitations\n",
+        "### Limitations \n",
+        "\n",
+        "**As of:** January 2025  \n",
+        "**Source:** [Official API Documentation](https://ai.google.dev/gemini-api/docs/interactions)\n",
         "\n",
         "- **Beta status**: The Interactions API is in beta/preview. Features and schemas may change.\n",
         "- **Unsupported features** (coming soon):\n",
         "  - Grounding with Google Maps\n",
         "  - Computer Use\n",
         "- **Output ordering**: Content ordering for built-in tools may sometimes be incorrect\n",
-        "- **Tool combinations**: Combining MCP, Function Call, and Built-in tools is not yet supported\n"
+        "- **Tool combinations**: Combining MCP, Function Call, and Built-in tools is not yet supported\n",
+        "\n",
+        "> **Note:** Limitations are subject to change as the API evolves. Please refer to the [official documentation](https://ai.google.dev/gemini-api/docs/interactions) for the most up-to-date information.\n"
       ]
     },
     {
