Add MCP (Model Context Protocol) integration example

--- a/google_interaction_api/demo_google_interation_api.ipynb
+++ b/google_interaction_api/demo_google_interation_api.ipynb
@@ -525,7 +525,97 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8. Best Practices and Important Notes\n",
+        "## 8. MCP (Model Context Protocol) Integration\n",
+        "\n",
+        "The Model Context Protocol (MCP) is an open standard that standardizes how LLMs communicate with external applications, data sources, and tools. The Interactions API supports integrating MCP servers as tools, enabling the model to interact with external services.\n",
+        "\n",
+        "**Key Points:**\n",
+        "- MCP servers are configured in the `tools` array\n",
+        "- Remote MCP only works with Streamable HTTP servers (SSE servers not supported)\n",
+        "- Remote MCP does not work with Gemini 3 models (support coming soon)\n",
+        "- MCP server names should use snake_case (no hyphens)\n",
+        "\n",
+        "**Documentation:** [MCP Integration Guide](https://ai.google.dev/gemini-api/docs/interactions#mcp)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Example: Using MCP server with Interactions API\n",
+        "# Note: This example uses a demo MCP server URL\n",
+        "# Replace with your own MCP server URL in production\n",
+        "\n",
+        "# Example MCP server configuration\n",
+        "# MCP servers allow the model to interact with external services and data sources\n",
+        "mcp_tools = [\n",
+        "    {\n",
+        "        \"type\": \"mcp_server\",\n",
+        "        \"name\": \"weather_service\",  # Use snake_case, no hyphens\n",
+        "        \"url\": \"https://gemini-api-demos.uc.r.appspot.com/mcp\"  # Example demo server\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "# Create an interaction with MCP tools\n",
+        "# Note: Use gemini-2.5-flash or gemini-2.5-pro (Gemini 3 models don't support remote MCP yet)\n",
+        "try:\n",
+        "    mcp_interaction = client.interactions.create(\n",
+        "        model=\"gemini-2.5-flash\",  # Use 2.5 models for MCP support\n",
+        "        input=\"What is the weather like in New York today?\",\n",
+        "        tools=mcp_tools,\n",
+        "        system_instruction=\"Today is 2025-01-15. Use the weather service to get current weather information.\"\n",
+        "    )\n",
+        "    \n",
+        "    print(\"MCP Interaction created successfully!\")\n",
+        "    print(f\"Interaction ID: {mcp_interaction.id}\")\n",
+        "    print(f\"Status: {mcp_interaction.status}\")\n",
+        "    print(f\"\\nModel Response:\")\n",
+        "    print(mcp_interaction.outputs[-1].text)\n",
+        "    \n",
+        "except Exception as e:\n",
+        "    print(f\"Error creating MCP interaction: {e}\")\n",
+        "    print(\"\\nNote: Make sure:\")\n",
+        "    print(\"1. You're using gemini-2.5-flash or gemini-2.5-pro (not Gemini 3)\")\n",
+        "    print(\"2. The MCP server URL is accessible and supports Streamable HTTP\")\n",
+        "    print(\"3. The MCP server name uses snake_case (no hyphens)\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### MCP Server Requirements\n",
+        "\n",
+        "When setting up your own MCP server for use with the Interactions API:\n",
+        "\n",
+        "1. **Server Type**: Must be a Streamable HTTP server (SSE servers are not supported)\n",
+        "2. **Model Compatibility**: Currently works with Gemini 2.5 models only\n",
+        "   - ✅ `gemini-2.5-pro`\n",
+        "   - ✅ `gemini-2.5-flash`\n",
+        "   - ❌ `gemini-3-pro-preview` (support coming soon)\n",
+        "   - ❌ `gemini-3-flash-preview` (support coming soon)\n",
+        "3. **Naming Convention**: Use snake_case for server names (e.g., `weather_service`, not `weather-service`)\n",
+        "\n",
+        "### Creating Your Own MCP Server\n",
+        "\n",
+        "To create a custom MCP server:\n",
+        "1. Implement the MCP protocol specification\n",
+        "2. Ensure it supports Streamable HTTP (not SSE)\n",
+        "3. Deploy it at a publicly accessible URL\n",
+        "4. Configure it in your interactions using the `tools` parameter\n",
+        "\n",
+        "For more information, see:\n",
+        "- [MCP Protocol Specification](https://modelcontextprotocol.io/)\n",
+        "- [Google's MCP Integration Guide](https://ai.google.dev/gemini-api/docs/interactions#mcp)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 9. Best Practices and Important Notes\n",
         "\n",
         "### Data Storage and Retention\n",
         "\n",
