Update MCP example to match official documentation format

--- a/google_interaction_api/demo_google_interation_api.ipynb
+++ b/google_interaction_api/demo_google_interation_api.ipynb
@@ -535,7 +535,7 @@
         "- Remote MCP does not work with Gemini 3 models (support coming soon)\n",
         "- MCP server names should use snake_case (no hyphens)\n",
         "\n",
-        "**Documentation:** [MCP Integration Guide](https://ai.google.dev/gemini-api/docs/interactions#mcp)\n"
+        "**Documentation:** [Official MCP Example](https://ai.google.dev/gemini-api/docs/interactions)\n"
       ]
     },
     {
@@ -545,34 +545,38 @@
       "outputs": [],
       "source": [
         "# Example: Using MCP server with Interactions API\n",
-        "# Note: This example uses a demo MCP server URL\n",
-        "# Replace with your own MCP server URL in production\n",
+        "# This example follows the official documentation format\n",
+        "# Source: https://ai.google.dev/gemini-api/docs/interactions\n",
         "\n",
-        "# Example MCP server configuration\n",
+        "import datetime\n",
+        "from google import genai\n",
+        "\n",
+        "# MCP server configuration\n",
         "# MCP servers allow the model to interact with external services and data sources\n",
-        "mcp_tools = [\n",
-        "    {\n",
-        "        \"type\": \"mcp_server\",\n",
-        "        \"name\": \"weather_service\",  # Use snake_case, no hyphens\n",
-        "        \"url\": \"https://gemini-api-demos.uc.r.appspot.com/mcp\"  # Example demo server\n",
-        "    }\n",
-        "]\n",
+        "mcp_server = {\n",
+        "    \"type\": \"mcp_server\",\n",
+        "    \"name\": \"weather_service\",\n",
+        "    \"url\": \"https://gemini-api-demos.uc.r.appspot.com/mcp\"\n",
+        "}\n",
+        "\n",
+        "# Get today's date for system instruction\n",
+        "today = datetime.date.today().strftime(\"%d %B %Y\")\n",
         "\n",
         "# Create an interaction with MCP tools\n",
         "# Note: Use gemini-2.5-flash or gemini-2.5-pro (Gemini 3 models don't support remote MCP yet)\n",
         "try:\n",
-        "    mcp_interaction = client.interactions.create(\n",
-        "        model=\"gemini-2.5-flash\",  # Use 2.5 models for MCP support\n",
+        "    interaction = client.interactions.create(\n",
+        "        model=\"gemini-2.5-flash\",\n",
         "        input=\"What is the weather like in New York today?\",\n",
-        "        tools=mcp_tools,\n",
-        "        system_instruction=\"Today is 2025-01-15. Use the weather service to get current weather information.\"\n",
+        "        tools=[mcp_server],\n",
+        "        system_instruction=f\"Today is {today}.\"\n",
         "    )\n",
         "    \n",
         "    print(\"MCP Interaction created successfully!\")\n",
-        "    print(f\"Interaction ID: {mcp_interaction.id}\")\n",
-        "    print(f\"Status: {mcp_interaction.status}\")\n",
+        "    print(f\"Interaction ID: {interaction.id}\")\n",
+        "    print(f\"Status: {interaction.status}\")\n",
         "    print(f\"\\nModel Response:\")\n",
-        "    print(mcp_interaction.outputs[-1].text)\n",
+        "    print(interaction.outputs[-1].text)\n",
         "    \n",
         "except Exception as e:\n",
         "    print(f\"Error creating MCP interaction: {e}\")\n",
